default/objects/Payment_Transaction__c/fields/Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Acceptance__c</fullName>
    <label>Acceptance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>