default/objects/Payment_Transaction__c/fields/Authorized__c.field-meta.xml
<CustomField>
    <fullName>Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized</label>
    <type>Checkbox</type>
</CustomField>