default/objects/Payment_Transaction__c/fields/BuyerCustomerId__c.field-meta.xml
<CustomField>
    <fullName>BuyerCustomerId__c</fullName>
    <label>BuyerCustomerId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>