default/objects/Payment_Transaction__c/fields/BuyerEmail__c.field-meta.xml
<CustomField>
    <fullName>BuyerEmail__c</fullName>
    <label>BuyerEmail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>