default/objects/Payment_Transaction__c/fields/BuyerFirstName__c.field-meta.xml
<CustomField>
    <fullName>BuyerFirstName__c</fullName>
    <label>BuyerFirstName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>