default/objects/Payment_Transaction__c/fields/BuyerLastName__c.field-meta.xml
<CustomField>
    <fullName>BuyerLastName__c</fullName>
    <label>BuyerLastName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>