default/objects/Payment_Transaction__c/fields/BuyerPhone__c.field-meta.xml
<CustomField>
    <fullName>BuyerPhone__c</fullName>
    <label>BuyerPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>