default/objects/Payment_Transaction__c/fields/CARDNO__c.field-meta.xml
<CustomField>
    <fullName>CARDNO__c</fullName>
    <label>CARDNO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>