default/objects/Payment_Transaction__c/fields/CN__c.field-meta.xml
<CustomField>
    <fullName>CN__c</fullName>
    <label>Card Holder Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>