default/objects/Payment_Transaction__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Сurrency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>