default/objects/Payment_Transaction__c/fields/ED__c.field-meta.xml
<CustomField>
    <fullName>ED__c</fullName>
    <label>Expiry date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>