default/objects/Payment_Transaction__c/fields/MerchantPosId__c.field-meta.xml
<CustomField>
    <fullName>MerchantPosId__c</fullName>
    <label>MerchantPosId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>