default/objects/Payment_Transaction__c/fields/NCERROR__c.field-meta.xml
<CustomField>
    <fullName>NCERROR__c</fullName>
    <label>NCERROR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>