default/objects/Payment_Transaction__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <displayFormat>OrderNo-{000000000}</displayFormat>
    <label>OrderID</label>
    <type>AutoNumber</type>
</CustomField>