default/objects/Payment_Transaction__c/fields/PayID__c.field-meta.xml
<CustomField>
    <fullName>PayID__c</fullName>
    <label>PayID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>