default/objects/Payment_Transaction__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>PaymentMethod</label>
    <length>30</length>
    <type>Text</type>
</CustomField>