default/objects/Payment_Transaction__c/fields/PayUOrderId__c.field-meta.xml
<CustomField>
    <fullName>PayUOrderId__c</fullName>
    <label>PayUOrderId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>