default/objects/Payment_Transaction__c/fields/SCO_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>SCO_CATEGORY__c</fullName>
    <label>SCO_CATEGORY</label>
    <length>10</length>
    <type>Text</type>
</CustomField>