default/objects/Payment_Transaction__c/fields/SCORING__c.field-meta.xml
<CustomField>
    <fullName>SCORING__c</fullName>
    <label>SCORING</label>
    <length>10</length>
    <type>Text</type>
</CustomField>