default/objects/Payment_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>