default/objects/Payment_Transaction__c/fields/TRXDATE__c.field-meta.xml
<CustomField>
    <fullName>TRXDATE__c</fullName>
    <label>TRXDATE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>